Start updating for FreeRTOS support.
Update picow-http to the version that has been tested successfully
for FreeRTOS with NO_SYS=0.

lib/FreeRTOS-Kernel is at version V10.6.2, for single-core.

lib/FreeRTOS-Kernel-smp is at the smp branch.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lib/picow-http"]
 	path = lib/picow-http
 	url = https://gitlab.com/slimhazard/picow_http.git
+[submodule "lib/FreeRTOS-Kernel"]
+	path = lib/FreeRTOS-Kernel
+	url = git@github.com:FreeRTOS/FreeRTOS-Kernel.git
+[submodule "lib/FreeRTOS-Kernel-smp"]
+	path = lib/FreeRTOS-Kernel-smp
+	url = git@github.com:FreeRTOS/FreeRTOS-Kernel.git
