--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,37 @@ include(pico_sdk_import.cmake)
 # details.
 include(picoprobe_targets.cmake)
 
+# FreeRTOS builds are enabled if FREERTOS_KERNEL_PATH is set either as
+# a -D definition or in the environment. Its value must point to one of
+# the submodules.
+set(HAVE_FREERTOS "NONE")
+if (NOT FREERTOS_KERNEL_PATH AND NOT DEFINED ENV{FREERTOS_KERNEL_PATH})
+	message("FREERTOS_KERNEL_PATH not defined, skipping FreeRTOS targets")
+else()
+	if (FREERTOS_KERNEL_PATH)
+		get_filename_component(frtos ${FREERTOS_KERNEL_PATH} REALPATH)
+	else()
+		get_filename_component(frtos ENV(FREERTOS_KERNEL_PATH)
+		                       REALPATH)
+	endif()
+	if (frtos STREQUAL ${CMAKE_CURRENT_LIST_DIR}/lib/FreeRTOS-Kernel)
+		set(HAVE_FREERTOS "SINGLE")
+	elseif (frtos STREQUAL ${CMAKE_CURRENT_LIST_DIR}/lib/FreeRTOS-Kernel-smp)
+		set(HAVE_FREERTOS "SMP")
+	else()
+		message(FATAL_ERROR "FREERTOS_KERNEL_PATH must be one of:\n"
+			"-- ${CMAKE_CURRENT_LIST_DIR}/lib/FreeRTOS-Kernel, or\n"
+                        "-- ${CMAKE_CURRENT_LIST_DIR}/lib/FreeRTOS-Kernel-smp")
+	endif()
+
+	include(${CMAKE_CURRENT_LIST_DIR}/FreeRTOS_Kernel_import.cmake)
+	if (${HAVE_FREERTOS} STREQUAL "SINGLE")
+		message("Build single-core FreeRTOS example apps")
+	else()
+		message("Build SMP FreeRTOS example apps")
+	endif()
+endif()
+
 project(picow-http-example C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
@@ -307,6 +338,55 @@ pico_set_program_url(picow-https-example-poll
 	"https://gitlab.com/slimhazard/picow-http-example"
 )
 
+if (${HAVE_FREERTOS} STREQUAL "SINGLE")
+	##
+	## Single-core FreeRTOS in sys mode, without TLS
+	##
+	add_executable(picow-http-example-sys-single
+		${CMAKE_CURRENT_LIST_DIR}/src/main-freertos.c
+		${SRCS}
+	)
+
+	target_compile_definitions(picow-http-example-sys-single PRIVATE
+		WIFI_SSID=\"${WIFI_SSID}\"
+		WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
+		PICOW_HTTPS=0
+		FREERTOS_MODE=SINGLE
+		NO_SYS=0
+	)
+
+	target_include_directories(picow-http-example-sys-single PRIVATE
+		${INCLUDES}
+	)
+
+	target_link_libraries(picow-http-example-sys-single
+		picow_http
+		pico_cyw43_arch_lwip_sys_freertos
+		${LIBS}
+		FreeRTOS-Kernel-Heap4
+	)
+
+	picow_http_gen_handlers(picow-http-example-sys-single
+		${CMAKE_CURRENT_SOURCE_DIR}/www/www.yaml
+		${CMAKE_CURRENT_SOURCE_DIR}/www
+		${WWWSRCS}
+	)
+
+	pico_enable_stdio_usb(picow-http-example-sys-single 0)
+	pico_enable_stdio_uart(picow-http-example-sys-single 1)
+
+	pico_add_extra_outputs(picow-http-example-sys-single)
+
+	picoprobe_add_flash_target(picow-http-example-sys-single)
+
+	pico_set_program_description(picow-http-example-sys-single
+		"example app for the picow-http library"
+	)
+	pico_set_program_url(picow-http-example-sys-single
+		"https://gitlab.com/slimhazard/picow-http-example"
+	)
+endif()
+
 ##
 ## Use the output of 'git describe', if available, as the version
 ## string
@@ -345,3 +425,11 @@ pico_set_program_version(picow-http-example-background ${PROGRAM_VERSION})
 pico_set_program_version(picow-http-example-poll ${PROGRAM_VERSION})
 pico_set_program_version(picow-https-example-background ${PROGRAM_VERSION})
 pico_set_program_version(picow-https-example-poll ${PROGRAM_VERSION})
+
+if (${HAVE_FREERTOS} STREQUAL "SINGLE")
+	target_compile_definitions(picow-http-example-sys-single PRIVATE
+		PROGRAM_VERSION="${PROGRAM_VERSION}"
+	)
+	pico_set_program_version(picow-http-example-sys-single
+	                         ${PROGRAM_VERSION})
+endif()
