--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -351,7 +351,7 @@ if (${HAVE_FREERTOS} STREQUAL "SINGLE")
 		WIFI_SSID=\"${WIFI_SSID}\"
 		WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
 		PICOW_HTTPS=0
-		FREERTOS_MODE=SINGLE
+		FREERTOS_CORES=1
 		NO_SYS=0
 	)
 
@@ -383,6 +383,53 @@ if (${HAVE_FREERTOS} STREQUAL "SINGLE")
 		"example app for the picow-http library"
 	)
 	pico_set_program_url(picow-http-example-sys-single
+		"https://gitlab.com/slimhazard/picow-http-example"
+	)
+elseif(${HAVE_FREERTOS} STREQUAL "SMP")
+	##
+	## SMP FreeRTOS in sys mode, without TLS
+	##
+	add_executable(picow-http-example-sys-smp
+		${CMAKE_CURRENT_LIST_DIR}/src/main-freertos.c
+		${SRCS}
+	)
+
+	target_compile_definitions(picow-http-example-sys-smp PRIVATE
+		WIFI_SSID=\"${WIFI_SSID}\"
+		WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
+		PICOW_HTTPS=0
+		FREERTOS_CORES=2
+		NO_SYS=0
+	)
+
+	target_include_directories(picow-http-example-sys-smp PRIVATE
+		${INCLUDES}
+	)
+
+	target_link_libraries(picow-http-example-sys-smp
+		picow_http
+		pico_cyw43_arch_lwip_sys_freertos
+		${LIBS}
+		FreeRTOS-Kernel-Heap4
+	)
+
+	picow_http_gen_handlers(picow-http-example-sys-smp
+		${CMAKE_CURRENT_SOURCE_DIR}/www/www.yaml
+		${CMAKE_CURRENT_SOURCE_DIR}/www
+		${WWWSRCS}
+	)
+
+	pico_enable_stdio_usb(picow-http-example-sys-smp 0)
+	pico_enable_stdio_uart(picow-http-example-sys-smp 1)
+
+	pico_add_extra_outputs(picow-http-example-sys-smp)
+
+	picoprobe_add_flash_target(picow-http-example-sys-smp)
+
+	pico_set_program_description(picow-http-example-sys-smp
+		"example app for the picow-http library"
+	)
+	pico_set_program_url(picow-http-example-sys-smp
 		"https://gitlab.com/slimhazard/picow-http-example"
 	)
 endif()
@@ -432,4 +479,9 @@ if (${HAVE_FREERTOS} STREQUAL "SINGLE")
 	)
 	pico_set_program_version(picow-http-example-sys-single
 	                         ${PROGRAM_VERSION})
+elseif(${HAVE_FREERTOS} STREQUAL "SMP")
+	target_compile_definitions(picow-http-example-sys-smp PRIVATE
+		PROGRAM_VERSION="${PROGRAM_VERSION}"
+	)
+	pico_set_program_version(picow-http-example-sys-smp ${PROGRAM_VERSION})
 endif()
