Add the FreeRTOS "nosys" sample app, supported since SDK version 2.0.0.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -510,6 +510,56 @@ pico_set_program_url(picow-https-example-freertos-sys-single
 )
 
 ##
+## "no-sys" FreeRTOS: with threadsafe background architecture and NO_SYS=1.
+## Only supported since SDK version 2.0.0.
+##
+if (${PICO_SDK_VERSION_STRING} VERSION_GREATER_EQUAL "2.0.0")
+	# Without TLS
+	add_executable(picow-http-example-freertos-nosys
+		${CMAKE_CURRENT_LIST_DIR}/src/main-freertos.c
+		${SRCS}
+	)
+
+	target_compile_definitions(picow-http-example-freertos-nosys PRIVATE
+		WIFI_SSID=\"${WIFI_SSID}\"
+		WIFI_PASSWORD=\"${WIFI_PASSWORD}\"
+		HAVE_FREERTOS=1
+		NO_SYS=1
+	)
+
+	target_include_directories(picow-http-example-freertos-nosys PRIVATE
+		${INCLUDES}
+	)
+
+	target_link_libraries(picow-http-example-freertos-nosys
+		picow_http
+		pico_cyw43_arch_lwip_threadsafe_background
+		${LIBS}
+		FreeRTOS-Kernel-Heap4
+	)
+
+	picow_http_gen_handlers(picow-http-example-freertos-nosys
+		${CMAKE_CURRENT_SOURCE_DIR}/www/www.yaml
+		${CMAKE_CURRENT_SOURCE_DIR}/www
+		${WWWSRCS}
+	)
+
+	pico_enable_stdio_usb(picow-http-example-freertos-nosys 0)
+	pico_enable_stdio_uart(picow-http-example-freertos-nosys 1)
+
+	pico_add_extra_outputs(picow-http-example-freertos-nosys)
+
+	picoprobe_add_flash_target(picow-http-example-freertos-nosys)
+
+	pico_set_program_description(picow-http-example-freertos-nosys
+		"example app for the picow-http library"
+	)
+	pico_set_program_url(picow-http-example-freertos-nosys
+		"https://gitlab.com/slimhazard/picow-http-example"
+	)
+endif()
+
+##
 ## Use the output of 'git describe', if available, as the version
 ## string
 ##
@@ -545,3 +595,9 @@ pico_set_program_version(picow-http-example-freertos-sys-single
 pico_set_program_version(picow-https-example-freertos-sys-single
                          ${PROGRAM_VERSION}
 )
+
+if (${PICO_SDK_VERSION_STRING} VERSION_GREATER_EQUAL "2.0.0")
+	pico_set_program_version(picow-http-example-freertos-nosys
+		${PROGRAM_VERSION}
+	)
+endif()
